# zelda-battery

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  README.md  SConstruct  TODO  TODO.md  circle.yml  config.json  configure.ac  example  example.conf  gulpfile.js  img  modules  mswin  package.json  setup.py  themachine.sh  win32.sh  win64.sh  zba.py  zbat.py  zbb.py  zbl.py  zblib.py  zblnk.py  zelda-battery.py  zelda-demo.sh
archive/: themachine.sh
archive/1.1/zbatt-1.1/: Makefile.in  configure  configure.ac  themachine.sh  torture.sh
archive/1.1/zbatt-1.1/src/: Makefile.am  Makefile.in  main-text.c  main.h
archive/1.1/zbatt-1.1/src/lib/: PKGBUILD
doc/: README.md
example/: .zshrc  LICENSE  README.md
img/: .gitignore  LICENSE  LICENSE.images  Makefile.am  empty-heart-2.xcf  empty-heart-3.xcf  empty-heart-base-1.xcf  full-heart-3.xcf  half-heart-3e.xcf  half-heart-base-1.xcf  heart-base-1.xcf  heart-base.xcf  qte-heart-2.xcf  qte-heart-3.xcf  qte-heart-3e.xcf  qte-heart-base-1.xcf  qtf-heart-2.xcf  qtf-heart-3e.xcf  qtf-heart-base-1.xcf
img/nix/: Makefile.am
img/orig/: qfull.xpm
img/win/: Makefile.am
img/xcf/: full-heart-2.xcf  full-heart-3e.xcf  half-heart-2.xcf  half-heart-3.xcf  heart-base.xcf  qtf-heart-3.xcf
inst/: .gitignore
man/: zbatt.1
modules/: README.md
nix/: Makefile.am  README.md  acpi.c  acpi.h  compat.h  concat.c  configure.ac  cpeek.c  main-color.c  main-gui.c  main-gui.h  main-gui.pyx  main-text.c  main.c  main.h  main_gui.pyx  no_common.h  power.c
nix/inst/: .gitignore
nix/src/: Makefile.am  main-gui.h  main-text.c  main.c  main_gui.pyx  test.scm
nix/test/: configure  configure.ac
old/: configure.ac
src/: CMakeLists.txt  Makefile.am  Makefile.in  README.md  acpi.c  acpi.h  bsd.c  cToScheme.c  cast.scm  cmp.sh  color.c  common.c  common.h  compat.h  concat.c  configure  configure.ac  cpeek.c  cppToScheme.c  h1.h  h2.h  h3.h  helper.scm  imgs.h  io.lua  io.scm  linux.c  list.scm  main-color.c  main-gui.c  main-gui.h  main-helper.scm  main-text.c  main.c  main.h  main_gui.pyx  power.c  power.h  power.jl  power.plx  (+19 more)
src/header/: color.h  main.h  power.h  text.h
src/headers/: color.h  main.h
src/mswin/: CMakeLists.txt  Makefile.am  gzbatt.cxx  main.cxx  main.hxx  text.cxx  zbatc.cxx  zbatt.cxx
test/: testing.sh
win/: Makefile.am  README.md  configure.ac  gzbatt.cxx  main.hxx  power.cxx  zbatc.cxx  zbatt.cxx
win/modules/: Makefile.am
